[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RL-Portfolio-with-Momentum-Filter"
version = "0.1.0"
description = "PCA + PPO portfolio optimization with momentum filter"
readme = "README.md"
keywords = ["Portfolio Optimization", "PCA factors", "agent", "RL environment", "Reinforcement Learning"]
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "torch>=2.2,<3",
]

[tool.setuptools]
py-modules = ["run", "agent", "backtest", "data_loader", "environment", "PCA_factors"]
